--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="index.css" />
+  <link rel="icon" type="image/jpeg" href="logo_placeholder_loginpage copy.jpeg">
+  <link rel="apple-touch-icon" href="logo_placeholder_loginpage copy.jpeg">
 </head>
 <body>
 
